# google-news-scraper

./: .gitignore  Makefile  README.md  pyproject.toml
src/google_news_scraper/: __main__.py  conf.py  cookies.py  models.py  parser.py  scraper.py
